syntax ="proto3";

package calculator;

option go_package= "./calculator/calculatorpb";

message SumRequest{
    int32 FirstNum=1;
    int32 SecondNum=2;
}

message SumResponse{
    int32 Result=1;
}

service calculatorService{
    rpc Sum (SumRequest) returns (SumResponse);
}

